# BA476-Project

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
code/: EDA.ipynb  eda.ipynb  processing.ipynb  project.ipynb  var_analysis.ipynb
